# backtester-and-wavelet-2b

./: README.md  backtester.py  chart.py  pyproject.toml  regime_hmm.py  requirements.txt  run_regime_analysis.py  wavelet_denoiser.py
strategy_folder/: wavelet_two_b.py
