[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trading-backtester-and-DSP"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = [
    "backtester",
    "backtester_scaled",
    "chart",
    "data_loader",
    "position_sizer",
    "regime_hmm",
    "run_comparison",
    "run_regime_analysis",
    "wavelet_denoiser",
    "wavelet_kalman_calibrate",
]
packages = ["strategy_folder"]
